include/alice_sdf.h

/* ============================================================================
 * Types
 * ============================================================================ */

/**
 * @brief Opaque handle to an SDF node
 *
 * All SDF operations return handles that must be freed with alice_sdf_free().
 */
typedef void* SdfHandle;
/**
 * @brief Result codes for FFI operations
 */
typedef enum {
    SdfResult_Ok = 0,
    SdfResult_InvalidHandle = 1,
    SdfResult_NullPointer = 2,
    SdfResult_InvalidParameter = 3,
    SdfResult_OutOfMemory = 4,
    SdfResult_IoError = 5,
    SdfResult_Unknown = 99
} SdfResult;
/**
 * @brief Batch evaluation result
 */
typedef struct {
    uint32_t count;
    SdfResult result;
} BatchResult;
/**
 * @brief String result (for shader generation)
 *
 * The data pointer must be freed with alice_sdf_free_string().
 */
typedef struct {
    char* data;       /**< Null-terminated UTF-8 string (or NULL on error) */
    uint32_t len;     /**< Length in bytes (not including null terminator) */
    SdfResult result; /**< Result code */
} StringResult;
/**
 * @brief Evaluate SDF at multiple points (parallel)
 * @param points Array of floats [x0, y0, z0, x1, y1, z1, ...]
 * @param distances Output array (must be pre-allocated)
 * @param count Number of points
 */
BatchResult alice_sdf_eval_batch(SdfHandle node,
                                  const float* points,
                                  float* distances,
                                  uint32_t count);
/* ============================================================================
 * Shader Generation
 * ============================================================================ */

/**
 * @brief Generate WGSL shader code
 * @note Requires 'gpu' feature
 */
StringResult alice_sdf_to_wgsl(SdfHandle node);
/**
 * @brief Generate HLSL shader code (for UE5/DirectX)
 * @note Requires 'hlsl' feature
 */
StringResult alice_sdf_to_hlsl(SdfHandle node);
/**
 * @brief Generate GLSL shader code (for Unity/OpenGL)
 * @note Requires 'glsl' feature
 */
StringResult alice_sdf_to_glsl(SdfHandle node);
/* ============================================================================
 * File I/O
 * ============================================================================ */

/**
 * @brief Save SDF to .asdf file
 * @param path File path (null-terminated UTF-8 string)
 */
SdfResult alice_sdf_save(SdfHandle node, const char* path);
/**
 * @brief Load SDF from .asdf file
 * @param path File path (null-terminated UTF-8 string)
 * @return Handle to loaded SDF (or SDF_HANDLE_NULL on error)
 */
SdfHandle alice_sdf_load(const char* path);
/* ============================================================================
 * Memory Management
 * ============================================================================ */

/**
 * @brief Free an SDF handle
 */
void alice_sdf_free(SdfHandle node);
/**
 * @brief Free a string returned by shader generation
 */
void alice_sdf_free_string(char* str);
/**
 * @brief Clone an SDF handle
 */
SdfHandle alice_sdf_clone(SdfHandle node);
/* ============================================================================
 * Utilities
 * ============================================================================ */

/**
 * @brief Get node count in an SDF tree
 */
uint32_t alice_sdf_node_count(SdfHandle node);
/**
 * @brief Check if a handle is valid
 */
bool alice_sdf_is_valid(SdfHandle node);