bindings/AliceSdf.cs


        /// <summary>Evaluate SDF at multiple points (parallel)</summary>
        public static float[] EvalBatch(IntPtr node, Vector3[] points)
        {
            int count = points.Length;
            float[] pointsFlat = new float[count * 3];
            for (int i = 0; i < count; i++)
            {
                pointsFlat[i * 3 + 0] = points[i].x;
                pointsFlat[i * 3 + 1] = points[i].y;
                pointsFlat[i * 3 + 2] = points[i].z;
            }

            float[] distances = new float[count];
            var result = alice_sdf_eval_batch(node, pointsFlat, distances, (uint)count);

            if (result.Result != SdfResult.Ok)
            {
                Debug.LogError($"EvalBatch failed: {result.Result}");
                return null;
            }

            return distances;
        }

        // ============================================================================
        // Shader Generation
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern StringResult alice_sdf_to_wgsl(IntPtr node);

        [DllImport(LibraryName)]
        private static extern StringResult alice_sdf_to_hlsl(IntPtr node);

        [DllImport(LibraryName)]
        private static extern StringResult alice_sdf_to_glsl(IntPtr node);

        /// <summary>Generate WGSL shader code</summary>
        public static string ToWgsl(IntPtr node)
        {
            var result = alice_sdf_to_wgsl(node);
            if (result.Result != SdfResult.Ok || result.Data == IntPtr.Zero) return null;
            string shader = Marshal.PtrToStringAnsi(result.Data);
            alice_sdf_free_string(result.Data);
            return shader;
        }

        /// <summary>Generate HLSL shader code (for UE5/DirectX)</summary>
        public static string ToHlsl(IntPtr node)
        {
            var result = alice_sdf_to_hlsl(node);
            if (result.Result != SdfResult.Ok || result.Data == IntPtr.Zero) return null;
            string shader = Marshal.PtrToStringAnsi(result.Data);
            alice_sdf_free_string(result.Data);
            return shader;
        }

        /// <summary>Generate GLSL shader code (for Unity/OpenGL)</summary>
        public static string ToGlsl(IntPtr node)
        {
            var result = alice_sdf_to_glsl(node);
            if (result.Result != SdfResult.Ok || result.Data == IntPtr.Zero) return null;
            string shader = Marshal.PtrToStringAnsi(result.Data);
            alice_sdf_free_string(result.Data);
            return shader;
        }

        // ============================================================================
        // File I/O
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern SdfResult alice_sdf_save(IntPtr node, string path);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_load(string path);

        /// <summary>Save SDF to .asdf file</summary>
        public static bool Save(IntPtr node, string path) =>
            alice_sdf_save(node, path) == SdfResult.Ok;

        /// <summary>Load SDF from .asdf file</summary>
        public static IntPtr Load(string path) => alice_sdf_load(path);

        // ============================================================================
        // Memory Management
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern void alice_sdf_free(IntPtr node);

        [DllImport(LibraryName)]
        private static extern void alice_sdf_free_string(IntPtr str);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_clone(IntPtr node);

        /// <summary>Free an SDF handle</summary>
        public static void Free(IntPtr node) => alice_sdf_free(node);

        /// <summary>Clone an SDF handle</summary>
        public static IntPtr Clone(IntPtr node) => alice_sdf_clone(node);

        // ============================================================================
        // Utilities
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_node_count(IntPtr node);

        [DllImport(LibraryName)]
        private static extern bool alice_sdf_is_valid(IntPtr node);

        /// <summary>Get node count in an SDF tree</summary>
        public static uint NodeCount(IntPtr node) => alice_sdf_node_count(node);

        /// <summary>Check if a handle is valid</summary>
        public static bool IsValid(IntPtr node) => alice_sdf_is_valid(node);
    }
}
